Make sure button and text does not overlap image.

--- a/apps/prudential/src/app/redemption/redemption.component.scss
+++ b/apps/prudential/src/app/redemption/redemption.component.scss
@@ -23,7 +23,7 @@ p {
   width: 100%;
   height: 100%;
   text-align: center;
-  max-height: calc(100vh - 280px);
+  max-height: calc(100% - 30rem);
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -35,7 +35,8 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 100%;
+  height: 90%;
+  object-fit: contain;
   transform: translate(-50%, -50%)
 }
 
@@ -53,4 +54,8 @@ p {
   font-size: 1.2rem;
   line-height: 1.4rem;
   opacity: 0.6;
+}
+
+.actions {
+  background-color: white;
 }
